Locales: Update Ukrainian & Belorusian (#895)
* Add translation of Search

* Fixed typo and stupid translation

* Translate of Belorusian locale (1\2)

* Translate Search on Belorusian (narkomovka)

* Да монав я робити назву, ща тіко птушка чекне, чи є помилки і мержайте

* хотфікс типу

* Знаешь знаешь чем харьковские отличаються от днепропетровских?

* Знаю, 200 километров разницы между ними

* 290... Но отличаются они тем, что днепропетровские думают как нажить, а харьковские где их oбъeбyют

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -47,7 +47,7 @@
 "register_referer_meta_title" = "$1 запрошує вас у $2!";
 "register_referer_meta_desc" = "Приєднуйтесь до $1 та багатьох інших користувачів у $2!";
 "registration_welcome_1" = "- універсальний засіб пошуку колег, засноване на структурі ВКонтакте.";
-"registration_welcome_2" = "Ми бажаємо, щоб друзі, однокурсники, однокласники, сусіди і колеги завжди могли бути в контакті.";
+"registration_welcome_2" = "Ми бажаємо, щоб друзі, однокурсники, однокласники, сусіди та колеги завжди могли бути в контакті.";
 "users" = "Користувачі";
 "other_fields" = "Інше";
 
@@ -82,6 +82,7 @@
 "no_information_provided" = "Інформація відсутня.";
 "deceased_person" = "Сторінка покійної людини";
 "none" = "відсутній";
+"desc_none" = "немає опису";
 "send" = "Відправити";
 "years_zero" = "0 років";
 "years_one" = "1 рік";
@@ -454,7 +455,13 @@
 "round avatars" = "Круглі";
 "apply_style_for_this_device" = "Застосувати стиль лише для цього пристрою";
 "search_for_groups" = "Пошук груп";
-"search_for_people" = "Пошук людей";
+"search_for_users" = "Пошук користувачів";
+"search_for_posts" = "Пошук дописів";
+"search_for_comments" = "Пошук коментарів";
+"search_for_videos" = "Пошук відео";
+"search_for_apps" = "Пошук додатків";
+"search_for_notes" = "Пошук нотаток";
+"search_for_audios" = "Пошук музики";
 "search_button" = "Знайти";
 "search_placeholder" = "Почніть вводити будь-яке ім'я, назву чи слово";
 "results_zero" = "Жодного результату";
@@ -839,7 +846,7 @@
 "banned_2" = "Привід: <b>$1</b>.";
 "banned_perm" = "На цей раз, Ви заблоковані назавжди.";
 "banned_until_time" = "На цей раз, Ви заблоковані до <b>$1</b>";
-"banned_3" = "Ви все ще можете <a href=\"/support?act=new\">написати в службу підтримки</a>, якщо вважаєте, що сталася помилка або <a href=\"/logout?hash= $1\">вийти</a>.";
+"banned_3" = "Ви все ще можете <a href=\"/support?act=new\">написати в службу підтримки</a>, якщо вважаєте що сталася помилка або <a href=\"/logout?hash= $1\">вийти</a>.";
 "banned_unban_myself" = "Розблокувати сторінку";
 "banned_unban_title" = "Ваш обліковий запис розблокований";
 "banned_unban_description" = "Намагайтеся, більше не порушувати правила.";
@@ -1166,8 +1173,8 @@
 
 "global_maintenance" = "Технічні роботи";
 "section_maintenance" = "Розділ недоступний";
-"undergoing_global_maintenance" = "На жаль, зараз інстанція закрита на технічні роботи. Ми вже працюємо над усуненням неполадок. Будь ласка, спробуйте зайти пізніше.";
-"undergoing_section_maintenance" = "На жаль, розділ <b>$1</b> тимчасово недоступний. Ми вже працюємо над усуненням неполадок. Будь ласка, спробуйте зайти пізніше.";
+"undergoing_global_maintenance" = "Інстанція закрита на технічні роботи. Будь ласка, спробуйте зайти пізніше.";
+"undergoing_section_maintenance" = "Розділ <b>$1</b> тимчасово недоступний. Будь ласка, спробуйте зайти пізніше.";
 "topics" = "Теми";
 
 /* Polls */
@@ -1259,11 +1266,11 @@
 "tour_section_2_text_2_2" = "Ви маєте змогу закрити доступ до своєї сторінки від пошукових систем і незареєстрованих користувачів.";
 "tour_section_2_text_2_3" = "<b>Пам'ятайте:</b> у майбутньому налаштування приватності будуть розширюватися.";
 "tour_section_2_title_3" = "Персональна адреса сторінки";
-"tour_section_2_text_3_1" = "Після реєстрації сторінки, вам видається персональний ID типу: <b>/id12345</b>";
+"tour_section_2_text_3_1" = "Після реєстрації сторінки, вам видається персональний ID типа: <b>/id12345</b>";
 "tour_section_2_text_3_2" = "<b>Стандартний ID</b>, який був отриманий після реєстрації, <b>змінити не можна!</b>";
 "tour_section_2_text_3_3" = "Однак, в налаштуваннях своєї сторінки ви зможете прив'язати свою персональну адресу і цю адресу <b>можна буде змінити</b> в будь-який час";
 "tour_section_2_text_3_4" = "<b>Порада:</b> Можна займати будь-яку вільну адресу, довжина якої не менша за 5 символів.";
-"tour_section_2_bottom_text_2" = "<i>Підтримується встановлення будь-якої короткої адреси з латинських маленьких літер; адреса може містити цифри (однак, не на початку), крапки та нижні підкреслення (не на початку або наприкінці)</i>";
+"tour_section_2_bottom_text_2" = "<i>Коротка адреса може складатися лише з латинських маленьких літер (a-z), цифр, крапок та нижніх підкреслень (але </i><b>не</b><i> напочатку чи кінці)</i>";
 "tour_section_2_title_4" = "Стіна";
 
 "tour_section_3_title_1" = "Діліться своїми фотографіями";
@@ -1287,7 +1294,7 @@
 "tour_section_5_text_3" = "Окрім завантаження відео напряму, сайт підтримує і вбудовані відео через YouTube";
 
 "tour_section_6_title_1" = "Аудіозаписи";
-"tour_section_6_text_1" = "!!! АУДІОЗАПИСІВ НЕМАЄ, ЧЕКАЙТЕ ІНФОРМАЦІЇ ВІД ГЕН.ШТАБУ !!!";
+"tour_section_6_text_1" = "Аудіозаписи в розробці, стежте за новинами";
 
 "tour_section_7_title_1" = "Слідкуйте за тим, що пишуть ваші друзі";
 "tour_section_7_text_1" = "Розділ &quot;Мої Новини&quot; поділяється на два типи: локальна стрічка та глобальна стрічка новин";
@@ -1332,14 +1339,14 @@
 "tour_section_12_text_3_1" = "За потреби, ви можете приховати непотрібні розділи сайту";
 "tour_section_12_text_3_2" = "<b>Нагадування: </b>Розділи першої необхідності (Моя Сторінка; Мої Друзі; Мої Відповіді; Мої Налаштування) приховати не можна";
 "tour_section_12_title_4" = "Вид постів";
-"tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтактє.сру, то ви завжди можете змінити вигляд постів на Мікроблог";
+"tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтакті, то ви завжди можете змінити вигляд постів на Мікроблог";
 "tour_section_12_text_4_2" = "Вид постів можна змінювати між двома варіантами в будь-який час";
 "tour_section_12_text_4_3" = "<b>Зверніть увагу</b>, що якщо обрано старий вид відображення постів, то останні коментарі довантажуватися не будуть";
 "tour_section_12_bottom_text_1" = "Сторінка встановлення фону";
 "tour_section_12_bottom_text_2" = "Приклади сторінок зі встановленим фоном";
 "tour_section_12_bottom_text_3" = "За допомогою цієї можливості ви можете додати своєму профілю більше індивідуальності";
 "tour_section_12_bottom_text_4" = "Старий вигляд постів";
-"tour_section_12_bottom_text_5" = "Мікроблок";
+"tour_section_12_bottom_text_5" = "Мікроблог";
 
 "tour_section_13_title_1" = "Ваучер";
 "tour_section_13_text_1" = "Ваучер в OpenVK це щось на кшталт промокоду на додавання будь-якої валюти (відсотки рейтингу, голосів тощо)";
@@ -1348,11 +1355,11 @@
 "tour_section_13_text_4" = "<b>Пам'ятайте: </b>Усі ваучери мають обмежений термін активації";
 "tour_section_13_bottom_text_1" = "Ваучери складаються з 24 цифр та літер";
 "tour_section_13_bottom_text_2" = "Активація пройшла вдало (наприклад, нам зарахували 100 голосів)";
-"tour_section_13_bottom_text_3" = "<b>Увага: </b>Після активації ваучера на вашу сторінку, той самий ваучер не можна буде активувати повторно";
+"tour_section_13_bottom_text_3" = "<b>Зверніть увагу: </b>Якщо ви вже активували ваучер на цьому аккаунті, його не можна повторно використати.";
 
 "tour_section_14_title_1" = "Мобільна версія";
 "tour_section_14_text_1" = "Наразі мобільної вебверсії сайту поки що немає, проте є мобільний додаток для Android";
-"tour_section_14_text_2" = "OpenVK Legacy - це мобільний додаток OpenVK для пристроїв на базі Android із дизайном ВКонтакте 3.0.4 2013 року";
+"tour_section_14_text_2" = "OpenVK Legacy - це мобільний додаток OpenVK для пристроїв на базі Android із дизайном ВКонтакті 3.0.4 2013 року";
 "tour_section_14_text_3" = "Мінімально підтримуваною версією є Android 2.1 Eclair, тобто апарати часів початку 2010-их стануть у пригоді.";
 
 "tour_section_14_title_2" = "Де це можна завантажити?";
@@ -1363,3 +1370,50 @@
 "tour_section_14_bottom_text_1" = "Скріншоти застосунку";
 "tour_section_14_bottom_text_2" = "На цьому екскурсія сайтом завершена. Якщо ви хочете спробувати наш мобільний застосунок, створити тут свою групу, покликати своїх друзів чи знайти нових, або взагалі просто якось розважитися, то це можна зробити просто зараз, пройшовши невелику <a href='/reg'>реєстрацію</a>";
 "tour_section_14_bottom_text_3" = "На цьому екскурсія сайтом завершена.";
+
+/* Search */
+
+"s_people" = "Люди";
+"s_groups" = "Спільноти";
+"s_events" = "Події";
+"s_apps" = "Застосунки";
+"s_questions" = "Запитання";
+"s_notes" = "Нотатки";
+"s_themes" = "Теми";
+"s_posts" = "Дописи";
+"s_comments" = "Коментарі";
+"s_videos" = "Відео";
+"s_audios" = "Музика";
+"s_by_people" = "по людям";
+"s_by_groups" = "по спільнотах";
+"s_by_posts" = "по дописах";
+"s_by_comments" = "по коментарях";
+"s_by_videos" = "по відео";
+"s_by_apps" = "по застосункам";
+"s_by_audios" = "по музиці";
+
+"s_order_by" = "Сортувати за...";
+
+"s_order_by_id" = "ID";
+"s_order_by_name" = "Назвою";
+"s_order_by_random" = "Випадковістю";
+"s_order_by_rating" = "Рейтингом";
+"s_order_invert" = "Інвертувати";
+
+"s_by_date" = "За датою";
+"s_registered_before" = "Зареєстровано до";
+"s_registered_after" = "Зареєстровано після";
+"s_date_before" = "До";
+"s_date_after" = "Після";
+
+"s_main" = "Основне";
+
+"s_now_on_site" = "зараз на сайті";
+"s_with_photo" = "з фото";
+"s_only_in_names" = "тільки в іменах";
+
+"s_any" = "будь-який";
+"reset" = "Очистити";
+
+"closed_group_post" = "Цей допис з приватної групи";
+"deleted_target_comment" = "Цей коментар належить до видаленого допису";
