--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1409,3 +1409,5 @@
 "mobile_groups" = "Группы";
 "mobile_search" = "Поиск";
 "mobile_desktop_version" = "Полная версия";
+"mobile_menu" = "Меню";
+"mobile_like" = "Мне нравится";
