Add missing EN strings

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1516,3 +1516,5 @@
 "mobile_groups" = "Groups";
 "mobile_search" = "Search";
 "mobile_desktop_version" = "Desktop version";
+"mobile_menu" = "Menu";
+"mobile_like" = "Like";
