--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1429,3 +1429,5 @@
 "mobile_groups" = Групи";
 "mobile_search" = "Пошук";
 "mobile_desktop_version" = "Повна версія";
+"mobile_menu" = "Меню";
+"mobile_like" = "Мені подобається";
