--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -405,6 +405,7 @@
 "my_settings" = "Мои Настройки";
 "bug_tracker" = "Баг-трекер";
 
+"menu_settings" = "Настройки";
 "menu_login" = "Вход";
 "menu_registration" = "Регистрация";
 "menu_help" = "Помощь";
@@ -1398,3 +1399,15 @@
 
 "closed_group_post" = "Эта запись из закрытой группы";
 "deleted_target_comment" = "Этот комментарий принадлежит к удалённой записи";
+
+/* Mobile */
+"mobile_friends" = "Друзья";
+"mobile_photos" = "Фотографии";
+"mobile_videos" = "Видеозаписи";
+"mobile_messages" = "Сообщения";
+"mobile_notes" = "Заметки";
+"mobile_groups" = "Группы";
+"mobile_search" = "Поиск";
+"mobile_desktop_version" = "Полная версия";
+"mobile_menu" = "Меню";
+"mobile_like" = "Мне нравится";
