Перенос ветки blacklist (#900)
* Blacklist

* Config

* upd

* Added restrictions in the users.get method

* ok

* Update en.strings

* ok 2.0

---------

Co-authored-by: Vladimir Barinov <veselcraft@icloud.com>

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1066,6 +1066,7 @@
 "admin_about_instance" = "Инстанция";
 "admin_commerce_disabled" = "Коммерция отключена системным администратором";
 "admin_commerce_disabled_desc" = "Настройки ваучеров и подарков будут сохранены, но не будут оказывать никакого влияния.";
+"admin_privacy_warning" = "Будьте осторожны с этой информацией";
 "admin_banned_links" = "Заблокированные ссылки";
 "admin_banned_link" = "Ссылка";
 "admin_banned_domain" = "Домен";
@@ -1123,6 +1124,7 @@
 "edit_action" = "Изменить";
 "transfer" = "Передать";
 "close" = "Закрыть";
+"success" = "Успех";
 "warning" = "Внимание";
 "question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
 
@@ -1135,6 +1137,13 @@
 
 "cookies_popup_content" = "Все дети любят печенье, поэтому этот веб-сайт использует Cookies для того, чтобы идентифицировать вашу сессию и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
 "cookies_popup_agree" = "Согласен";
+
+/* Blacklist */
+
+"blacklist" = "Чёрный список";
+"user_blacklisted_you" = "Пользователь внёс Вас в чёрный список.";
+"user_blacklisted" = "$1 занесён в чёрный список."
+"user_removed_from_the_blacklist" = "$1 удалён из чёрного списка."
 
 /* Away */
 
