Add Russian strings for OpenVK Mobile

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1408,6 +1408,7 @@
 "mobile_notes" = "Заметки";
 "mobile_groups" = "Группы";
 "mobile_search" = "Поиск";
+"mobile_settings" = "Настройки"
 "mobile_desktop_version" = "Полная версия";
 "mobile_menu" = "Меню";
 "mobile_like" = "Мне нравится";
