--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1428,6 +1428,7 @@
 "mobile_notes" = "Нотатки";
 "mobile_groups" = Групи";
 "mobile_search" = "Пошук";
+"mobile_settings" = "Налаштування";
 "mobile_desktop_version" = "Повна версія";
 "mobile_menu" = "Меню";
 "mobile_like" = "Мені подобається";
