теперь я из гх десктопа, я очень надеюсь, что бот закончит спамить

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1517,5 +1517,6 @@
 "mobile_search" = "Search";
 "mobile_settings" = "Settings";
 "mobile_desktop_version" = "Desktop version";
+"mobile_log_out" = "Log out";
 "mobile_menu" = "Menu";
 "mobile_like" = "Like";
