--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1408,7 +1408,8 @@
 "mobile_notes" = "Заметки";
 "mobile_groups" = "Группы";
 "mobile_search" = "Поиск";
-"mobile_settings" = "Настройки"
+"mobile_settings" = "Настройки";
 "mobile_desktop_version" = "Полная версия";
+"mobile_log_out" = "Выйти";
 "mobile_menu" = "Меню";
 "mobile_like" = "Мне нравится";
