--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1520,3 +1520,5 @@
 "mobile_log_out" = "Log out";
 "mobile_menu" = "Menu";
 "mobile_like" = "Like";
+"mobile_user_info_hide" = "Hide";
+"mobile_user_info_show_details" = "Show details";
