--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -396,6 +396,8 @@
 
 "select_or_create_new" = "Выберите существующую заметку или <a href='/notes/create'>создайте новую</a>";
 
+"notes_closed" = "Вы не можете прикрепить заметку к записи, так как ваши заметки видны только вам.<br><br> Вы можете поменять это в <a href=\"/settings?act=privacy\">настройках</a>.";
+
 /* Menus */
 
 "edit_button" = "ред.";
