Wall: add notes attachments to posts (#907)
* Posts: add notes attachments

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -389,6 +389,16 @@
 "notes_list_many" = "Найдено $1 заметок";
 "notes_list_other" = "Найдено $1 заметок";
 
+"select_note" = "Выбор заметки";
+"no_notes" = "У вас нет ни одной заметки";
+
+"error_attaching_note" = "Не удалось прикрепить заметку";
+
+"select_or_create_new" = "Выберите существующую заметку или <a href='/notes/create'>создайте новую</a>";
+
+"notes_closed" = "Вы не можете прикрепить заметку к записи, так как ваши заметки видны только вам.<br><br> Вы можете поменять это в <a href=\"/settings?act=privacy\">настройках</a>.";
+"do_not_attach_note" = "Не прикреплять заметку";
+
 /* Menus */
 
 "edit_button" = "ред.";
