--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -132,6 +132,18 @@
 "updated_at" = "Обновлено $1";
 "user_banned" = "К сожалению, нам пришлось заблокировать страницу пользователя <b>$1</b>.";
 "user_banned_comment" = "Комментарий модератора:";
+"limited_access_to_page_m" = "$1 ограничил доступ к своей странице.";
+"limited_access_to_page_f" = "$1 ограничила доступ к своей странице.";
+
+"you_can_add" = "Вы можете";
+"add_to_friends_m" = "добавить его в друзья.";
+"add_to_friends_f" = "добавить её в друзья.";
+
+"register_to_access_page_m" = "Зарегистрируйтесь, чтобы получить доступ к его странице.";
+"register_to_access_page_f" = "Зарегистрируйтесь, чтобы получить доступ к её странице.";
+
+"private_profile_warning" = "Этот профиль закрытый, но вы имеете к нему доступ, потому что вы — администратор.";
+"private_profile_warning_desc" = "Пожалуйста, уважайте право на личную жизнь и не злоупотребляйте этой возможностью.";
 
 /* Wall */
 
@@ -191,6 +203,9 @@
 "version_incompatibility" = "Не удалось отобразить это вложение. Возможно, база данных несовместима с текущей версией OpenVK.";
 "graffiti" = "Граффити";
 "reply" = "Ответить";
+"no_access_attachment" = "Нет доступа к прикреплению";
+"no_access_post" = "Нет доступа к записи";
+"no_access_abstract" = "Нет доступа";
 
 /* Friends */
 
@@ -314,6 +329,36 @@
 "search_group" = "Поиск группы";
 "search_by_groups" = "Поиск по группам";
 "search_group_desc" = "Здесь Вы можете просмотреть существующие группы и выбрать группу себе по вкусу...";
+
+"owners_delete" = "Только создатель группы может удалить её.";
+"owners_restore" = "Только создатель группы может восстановить её?";
+
+"delete_group" = "Удалить группу";
+"restore_group" = "Восстановить группу";
+
+"group_deletion" = "Удаление группы";
+"trying_delete_group" = "Вы собираетесь удалить эту группу. <br><br> Введите ваш пароль:";
+
+"group_was_deleted" = "Данная группа была удалена создателем.";
+"group_was_blocked" = "Данная группа была заблокирована.";
+
+"deleted_f" = "Удалена";
+"ban_reason_g" = "Причина блокировки";
+
+"ban_group" = "Заблокировать группу";
+"ban_group_desc" = "Вы собираетесь заблокировать группу $1. <br><br>Введите причину блокировки:";
+"unban_group" = "Разблокировать группу";
+
+"go_to_owner" = "Перейти на страницу создателя";
+
+"come_up_with_something_cool" = "придумайте что-нибудь крутое";
+"delete_every_post" = "Удалить все записи";
+"unsubscribe_everyoune" = "Отписать всех участников";
+"warn_owner_club" = "Предупредить создателя группы";
+
+"cant_ban_group" = "Не удалось заблокировать группу";
+"your_club_was_banned" = "Ваша группа \"$1\" была заблокирована по причине $2";
+"your_club_was_unbanned" = "Ваша группа \"$1\" была разблокирована";
 
 /* Albums */
 
@@ -496,6 +541,9 @@
 "privacy_value_only_me" = "Только я";
 "privacy_value_only_me_dative" = "Только мне";
 "privacy_value_nobody" = "Никто";
+"profile_type" = "Тип профиля";
+"profile_type_open" = "Открытый";
+"profile_type_closed" = "Закрытый";
 "your_email_address" = "Адрес Вашей электронной почты";
 "your_page_address" = "Адрес Вашей страницы";
 "page_address" = "Адрес страницы";
@@ -1246,6 +1294,7 @@
 "tour_section_2_text_2_1" = "Вы можете определить, кто именно может иметь доступ к определенным типам информации, разделам и возможностям связаться на вашей странице.";
 "tour_section_2_text_2_2" = "Вы имеете полное право закрыть доступ к своей странице от поисковых систем и незарегистрированных пользователей.";
 "tour_section_2_text_2_3" = "<b>Помните:</b> в будущем настройки приватности будут расширяться.";
+"tour_section_2_text_2_4" = "Так же вы можете сделать ваш профиль закрытым, задав соответствующую настройку \"Тип профиля\".";
 "tour_section_2_title_3" = "Персональный адрес страницы";
 "tour_section_2_text_3_1" = "После регистрации страницы, вам выдаётся персональный ID вида <b>@id12345</b>";
 "tour_section_2_text_3_2" = "<b>Стандартный ID</b>, который был получен после регистрации, <b>изменить нельзя</b>";
@@ -1263,8 +1312,8 @@
 
 
 "tour_section_4_title_1" = "Поиск";
-"tour_section_4_text_1" = "Раздел &quot;Поиск&quot; позволяет искать пользователей и группы.";
-"tour_section_4_text_2" = "Данный раздел сайта со временем будет улучшаться.";
+"tour_section_4_text_1" = "Раздел &quot;Поиск&quot; позволяет искать пользователей, групп, а так же комментарии, видео, посты и приложения.";
+"tour_section_4_text_2" = "Результаты поиска можно сортировать и фильтровать.";
 "tour_section_4_text_3" = "Для начала поиска нужно знать имя (или фамилию) пользователя; а если ищете группу, то нужно знать её название.";
 "tour_section_4_title_2" = "Быстрый поиск";
 "tour_section_4_text_4" = "Если вы хотите как-либо сэкономить время, то строка поиска доступна и в шапке сайта";
@@ -1407,8 +1456,9 @@
 "s_any" = "любой";
 "reset" = "Сброс";
 
-"closed_group_post" = "Эта запись из закрытой группы";
-"deleted_target_comment" = "Этот комментарий принадлежит к удалённой записи";
+"dont_need_to_see_comment" = "Нет доступа к комментарию.";
+"dont_need_to_see_post" = "Нет доступа к записи.";
+"dont_need_to_see_video" = "Нет доступа к видео.";
 
 "no_results" = "Результатов нет";
 
