--- a/locales/ru_sov.strings
+++ b/locales/ru_sov.strings
@@ -137,6 +137,20 @@
 "user_banned" = "Органу управления пришлось отправить <b>$1</b> под стражу.";
 "user_banned_comment" = "Комментарий милиции:";
 
+"limited_access_to_page_m" = "$1 частично ограничил доступ к своему досье.";
+"limited_access_to_page_f" = "$1 частично ограничила доступ к своему досье.";
+
+"you_can_add" = "Вы можете принять решение";
+"add_to_friends_m" = "добавить его в товарищи.";
+"add_to_friends_f" = "добавить её в товарищи.";
+
+"register_to_access_page_m" = "Зарегистрируйтесь, чтобы увидеть его досье.";
+"register_to_access_page_f" = "Зарегистрируйтесь, чтобы увидеть её досье.";
+
+"private_profile_warning" = "Это досье закрытое, но вы имеете к нему доступ, потому что вы — администратор.";
+"private_profile_warning_desc" = "Пожалуйста, не уважайте право на частную жизнь и злоупотребляйте этой возможностью.";
+
+
 /* Wall */
 
 "feed" = "Новостная газета";
@@ -292,6 +306,40 @@
 "meetings_few" = "$1 встречи";
 "meetings_many" = "$1 встреч";
 "meetings_other" = "$1 встреч";
+
+"open_new_group" = "Открыть новое собрание";
+"open_group_desc" = "Не можете найти нужное собрание? Откройте своё...";
+"search_group" = "Поиск собраний";
+"search_by_groups" = "Поиск по собраниям";
+"search_group_desc" = "Здесь Вы можете просмотреть существующие собрания и выбрать группу себе по вкусу...";
+
+"owners_delete" = "Только создатель собрания может удалить её.";
+"owners_restore" = "Только создатель собрания может восстановить её?";
+
+"delete_group" = "Удалить собрание";
+"restore_group" = "Восстановить собрание";
+
+"group_deletion" = "Удаление собрания";
+"trying_delete_group" = "Вы собираетесь удалить это собрание. <br><br> Введите ваше проходное слово:";
+
+"group_was_deleted" = "Данное собрание было расформировано создателем.";
+"group_was_blocked" = "Данное собрание было разогнано.";
+
+"deleted_f" = "Удалена";
+"ban_reason_g" = "Причина разогнания";
+
+"ban_group" = "Заблокировать собрание";
+"ban_group_desc" = "Вы собираетесь разогнать собрание $1. <br><br>Введите причину разогнать:";
+"unban_group" = "Переформировать группу";
+
+"go_to_owner" = "Перейти на досье главы";
+
+"come_up_with_something_cool" = "придумайте что-нибудь доброе";
+
+"cant_ban_group" = "Не удалось разогнать собрание";
+"your_club_was_banned" = "Ваше собрание \"$1\" было заблокировано по причине $2";
+"your_club_was_unbanned" = "Ваше собрание \"$1\" была разблокировано";
+
 
 /* Albums */
 
@@ -461,6 +509,10 @@
 "privacy_value_only_me" = "Только я и КГБ";
 "privacy_value_only_me_dative" = "Только мне и КГБ";
 "privacy_value_nobody" = "Никто";
+
+"profile_type" = "Тип досье";
+"profile_type_open" = "Открытый";
+"profile_type_closed" = "Частично закрытый";
 
 "your_email_address" = "Адрес Вашего почтового ящика";
 "your_page_address" = "Адрес Вашего досье";
@@ -977,5 +1029,8 @@
 "s_any" = "любой";
 "reset" = "Сброс";
 
-"closed_group_post" = "Эта запись из закрытого собрания";
-"deleted_target_comment" = "Этот отзыв надлежит к удалённой записи";
+"dont_need_to_see_comment" = "Здесь нет никакого комментария.";
+"dont_need_to_see_post" = "Здесь нет никакой записи.";
+"dont_need_to_see_video" = "Здесь нет никакой киноленты.";
+
+"no_results" = "Результатов нет";
